<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.nkuppan.giphybrowser.domain.utils.SearchPageValidatorKt" />

        <variable
            name="searchViewModel"
            type="com.nkuppan.giphybrowser.presentation.search.SearchViewModel" />

        <variable
            name="themeViewModel"
            type="com.nkuppan.giphybrowser.presentation.theme.ThemeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/search_container"
            layout="@layout/widget_search_container"
            app:viewModel="@{searchViewModel}" />

        <RadioGroup
            android:id="@+id/giphy_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:checkedButton="@id/gif"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/search_container"
            app:layout_constraintStart_toStartOf="@id/search_container"
            app:layout_constraintTop_toBottomOf="@id/search_container">

            <RadioButton
                android:id="@+id/gif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16dp"
                android:text="@string/gif" />

            <RadioButton
                android:id="@+id/stickers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16dp"
                android:text="@string/stickers" />

        </RadioGroup>

        <ImageView
            android:id="@+id/giphy_bottom_logo"
            android:layout_width="@dimen/launcher_bottom_logo_width"
            android:layout_height="@dimen/launcher_bottom_logo_height"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_giphy_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/powered_by"
            app:layout_constraintBottom_toBottomOf="@id/giphy_bottom_logo"
            app:layout_constraintEnd_toStartOf="@id/giphy_bottom_logo"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/giphy_bottom_logo" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:enabled="@{SearchPageValidatorKt.isValidQueryString(searchViewModel.queryString)}"
            android:onClick="@{()->searchViewModel.processQuery()}"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/giphy_types" />

        <ImageView
            android:id="@+id/choose_theme"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:contentDescription="@string/choose_theme"
            android:onClick="@{() -> themeViewModel.chooseTheme()}"
            android:src="@drawable/ic_theme"
            android:text="@string/choose_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>